# mathjit

./: CMakeLists.txt  LICENSE  README.md
include/: ast.hpp  eval.hpp  grammar.hpp  jit_eval.hpp  mathjit.hpp
src/: main.cpp
